<?xml version="1.0" encoding="utf-8"?>

<!--侧边栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--有选中行为的菜单项-->

    <group
        android:id="@+id/main_tab"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/look"
            android:title="@string/menu_trending" />


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile" />


    </group>
    <!--无选中行为的菜单项-->
    <group
        android:id="@+id/setting"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>


</menu>
