<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/school_assistant" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <com.xuexiang.xui.widget.layout.XUIFrameLayout
            style="@style/XUILayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_phone_number"
                android:inputType="number"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_phone_number_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_phone_number"
                app:met_hideUnderline="true"
                app:met_maxCharacters="11"
                app:met_regexp="@string/regex_phone_number" />

        </com.xuexiang.xui.widget.layout.XUIFrameLayout>

        <com.xuexiang.xui.widget.layout.XUIFrameLayout
            style="@style/XUILayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/newpwd"
                android:inputType="textPassword"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_password"
                app:met_hideUnderline="true"
                app:met_maxCharacters="18"
                app:met_passWordButton="true"
                app:met_regexp="@string/regex_password" />

        </com.xuexiang.xui.widget.layout.XUIFrameLayout>


        <com.xuexiang.xui.widget.layout.XUIFrameLayout
            style="@style/XUILayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/repwd" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/repwd"
                android:inputType="textPassword"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_password"
                app:met_hideUnderline="true"
                app:met_maxCharacters="18"
                app:met_passWordButton="true"
                app:met_regexp="@string/regex_password" />
        </com.xuexiang.xui.widget.layout.XUIFrameLayout>

        <com.xuexiang.xui.widget.layout.XUIFrameLayout
            android:id="@+id/fl_verify_code"
            style="@style/XUILayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/yanzhengma" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_verify_code"
                android:inputType="number"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_verify_code_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/lab_verify_code"
                app:met_hideUnderline="true"
                app:met_maxCharacters="6"
                app:met_regexp="@string/regex_verify_code" />

            <Button
                android:id="@+id/btn_get_verify_code"
                style="@style/RoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:paddingBottom="3dp"
                android:text="@string/action_get_verify_code"
                android:textColor="@color/selector_round_button_main_theme_color"
                android:textSize="13sp"
                app:rb_borderColor="@color/selector_round_button_main_theme_color"
                app:rb_borderWidth="1.5dp"
                app:rb_radius="15dp" />

        </com.xuexiang.xui.widget.layout.XUIFrameLayout>
    </LinearLayout>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btn_reset"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:text="@string/resetpwd" />


</LinearLayout>