<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/xui_config_color_background"
    android:orientation="vertical">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout style="@style/PullDownStyle">

        <androidx.core.widget.NestedScrollView style="@style/ScrollViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/hot1"
                    style="@style/InfoItem.hot"
                    app:sLeftTextString="@string/crash" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/hot2"
                    style="@style/InfoItem.hot"
                    app:sLeftTextString="@string/ac_problem" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/hot3"
                    style="@style/InfoItem.hot"
                    app:sLeftTextString="@string/how_protect" />

                <Button
                    android:id="@+id/su_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="420dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/suggestion" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>